# gandhigiri-ai

./: .gitignore  .gitmodules  README.md  TRAINING.md  example.env  pyproject.toml
scripts/: download_checkpoints.py  extractor.py  llm.py  main.py  tts.py  voice_changer.py
