[project]
name = "gandhigiri-ai"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anyascii>=0.3.3",
    "cached-path>=1.8.10",
    "cn2an>=0.5.24",
    "dotenv>=0.9.9",
    "eng-to-ipa>=0.0.2",
    "faster-whisper>=1.2.1",
    "fugashi>=1.5.2",
    "g2p-en>=2.1.0",
    "gradio>=6.15.2",
    "groq>=1.4.0",
    "gruut>=2.4.0",
    "huggingface-hub>=1.17.0",
    "inflect>=7.5.0",
    "jamo>=0.4.1",
    "jieba>=0.42.1",
    "langid>=1.1.6",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "mecab-python3>=1.0.12",
    "num2words>=0.5.14",
    "numpy>=2.4.6",
    "pyannote-audio>=4.0.4",
    "pydub>=0.25.1",
    "pykakasi>=2.3.0",
    "pypinyin>=0.55.0",
    "silero-vad==5.1.2",
    "tensorboard>=2.20.0",
    "transformers>=5.9.0",
    "unidecode>=1.4.0",
    "unidic>=1.1.0",
    "unidic-lite>=1.0.8",
    "wavmark>=0.0.3",
    "whisper-timestamped>=1.15.9",
]
