[project]
name = "gandhigiri-ai"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "edge-tts>=7.2.8",
    "faiss-cpu>=1.14.3",
    "groq>=1.4.0",
    "indic-transliteration>=2.3.82",
    "librosa>=0.11.0",
    "noisereduce>=3.0.3",
    "pedalboard>=0.9.23",
    "playsound3>=3.3.1",
    "pyannote-audio>=4.0.4",
    "tensorboard>=2.20.0",
    "torchcrepe>=0.0.24",
    "torchfcpe>=0.0.4",
    "transformers>=5.12.1",
    "wget>=3.2",
]
